@@ -158,6 +158,13 @@ linedefflags
 	include("Includes\\Boom_misc.cfg", "linedefflags");
 }
 
+linedefflagtooltips
+{
+	include("Includes\\Doom_misc.cfg", "linedefflagtooltips");
+	include("Includes\\Boom_misc.cfg", "linedefflagtooltips");
+}
+
+
 
 // LINEDEF ACTIVATIONS
 linedefactivations
@@ -195,6 +202,12 @@ thingflags
 {
 	include("Includes\\Doom_misc.cfg", "thingflags");
 	include("Includes\\Boom_misc.cfg", "thingflags");
+}
+
+thingflagtooltips
+{
+	include("Includes\\Doom_misc.cfg", "thingflagtooltips");
+	include("Includes\\Boom_misc.cfg", "thingflagtooltips");
 }
 
 
