@@ -145,6 +145,11 @@ linedefflags
 	include("Includes\\Doom_misc.cfg", "linedefflags");
 }
 
+linedefflagtooltips
+{
+	include("Includes\\Doom_misc.cfg", "linedefflagtooltips");
+}
+
 
 // LINEDEF ACTIVATIONS
 linedefactivations
@@ -173,6 +178,11 @@ linedeftypes
 thingflags
 {
 	include("Includes\\Doom_misc.cfg", "thingflags");
+}
+
+thingflagtooltips
+{
+	include("Includes\\Doom_misc.cfg", "thingflagtooltips");
 }
 
 
