@@ -168,6 +168,12 @@ linedefflags
 	include("Includes\\ZDoom_misc.cfg", "linedefflags_udmf");
 }
 
+linedefflagtooltips
+{
+	include("Includes\\UDMF_misc.cfg", "linedefflagtooltips");
+	include("Includes\\ZDoom_misc.cfg", "linedefflagtooltips_udmf");
+}
+
 
 // LINEDEF ACTIVATIONS
 linedefactivations
@@ -190,6 +196,12 @@ thingflags
 {
 	include("Includes\\UDMF_misc.cfg", "thingflags");
 	include("Includes\\ZDoom_misc.cfg", "thingflags_udmf");
+}
+
+thingflagtooltips
+{
+	include("Includes\\UDMF_misc.cfg", "thingflagtooltips");
+	include("Includes\\ZDoom_misc.cfg", "thingflagtooltips_udmf");
 }
 
 
