@@ -5,6 +5,11 @@ linedefflags
 	512 = "PassThru";
 }
 
+linedefflagtooltips
+{
+	512 = "Normally, if you try to pull a switch or use a door, then players are only able to activate\nthe closest linedef with a special. When PassThru is set, your use reaches\nthrough and allows players to activate both this line and whatever is behind this\nline.\nThis does nothing for 1-sided lines because they always block use actions.\n\nNote that if someone plays your map on ZDoom-derived ports like GZDoom or Zandronum,\nthen PassThru will be true for walkover specials & scrollers even when this flag\nis not set, unless you set 'compat_useblocking' in MAPINFO.";
+}
+
 
 // Linedef flags UDMF translation table
 // This is needed for copy/paste and prefabs to work properly
@@ -20,6 +25,12 @@ thingflags
 {
 	32 = "Not Deathmatch";
 	64 = "Not Cooperative";
+}
+
+thingflagtooltips
+{
+	32 = "If set, this actor does not appear in deathmatch modes.";
+	64 = "If set, this actor does not appear in cooperative modes.";
 }
 
 
