@@ -25,6 +25,19 @@ linedefflags
 	256 = "Shown";
 }
 
+linedefflagtooltips
+{
+	1 = "If set on a 2-sided linedef, the linedef blocks players and monsters from being able to move through it. \nThis is typically used for mid-textured cage bars.\nBy convention, most doom-related software sets it for 1-sided lines by default because the\nid Software maps did, but it doesn't actually do anything.";
+	2 = "If set, blocks only monster movement.\n(in addition to whatever existing blocking properties it would have).\nDoes not affect 1-sided lines.";
+	4 = "If set, then it has 2 sidedefs and acts as a connection between two sectors.";
+	8 = "If set:\nIf the linedef is 2-sided, the upper texture starts at the height of the higher ceiling.\nIf not set: and the linedef is 2-sided, the upper texture starts at the lower ceiling instead.\nIf the linedef is 1-sided, this does nothing.";
+	16 = "If set: If the linedef is 2-sided, the lower texture starts at the height of the higher ceiling.\nIf not set: and the linedef is 2-sided, the upper texture starts at the higher floor instead.\nIf the linedef is 1-sided, this makes the mid texture start at floor instead of the ceiling.\nYou probably want to use this for door tracks if you don't want them to move with the door.";
+	32 = "If set, this flag prevents it from being marked as a switch or a door on the automap.";
+	64 = "If set, this linedef will partially block monster-waking sound from passing into the sector on the other side of it.\nNote that a sound must try to pass through two of these lines before being blocked.\nThis does not block the actual audio that the player hears at all, it is only for the monster AI.\nThis does nothing for 1-sided linedefs.";
+	128 = "If set, this line is not shown on the automap even if you are looking directly at it";
+	256 = "If set, this line is always revealed on the automap even if you haven't actually visited the area.";
+}
+
 
 thingflags
 {
@@ -32,9 +45,17 @@ thingflags
 	2 = "Medium";
 	4 = "Hard";
 	8 = "Ambush";
-	16 = "Multiplayer";
+	16 = "Multiplayer Only";
 }
 
+thingflagtooltips
+{
+	1 = "If set, this actor appears on 'I'm Too Young To Die' and 'Hey, Not Too Rough' difficulties.";
+	2 = "If set, this actor appears on 'Hurt Me Plenty' difficulty.";
+	4 = "If set, this actor appears on 'Ultraviolence' and 'Nightmare' difficulty.";
+	8 = "If set, this actor does not wake up if it hears the player until the player comes within field of view\n(even if the actor is facing the away from the player).";
+	16 = "If set, this actor does not appear in singleplayer.";
+}
 
 // Default flags for first new thing
 defaultthingflags
