@@ -21,6 +21,25 @@ thingflags
 	invisible = "Invisible";
 }
 
+thingflagtooltips
+{
+	skill1 = "If set, this actor appears on 'I'm Too Young To Die' difficulty.";
+	skill2 = "If set, this actor appears on 'Hey, Not Too Rough' difficulty.";
+	skill3 = "If set, this actor appears on 'Hurt Me Plenty' difficulty.";
+	skill4 = "If set, this actor appears on 'Ultraviolence' difficulty.";
+	skill5 = "If set, this actor appears on 'Nightmare' difficulty.";
+	ambush = "If set, this actor does not wake up if it hears the player until the player comes within field of view\n(even if the actor is facing the away from the player).";
+	single = "If not set, the actor does not appear in singleplayer modes.";
+	dm = "If not set, the actor does not appear in deathmatch modes.";
+	coop = "If not set, the actor does not appear in co-op modes.";
+	friend = "If set, the actor is friendly to the player.\nIf it is a monster, it will attack other players.";
+	dormant = "If set, the actor can't be damaged or interact with anything.\nThe Thing_Activate special or ACS function will remove this property,\nonce activated.";
+	standing = "If set, the actor stands still, used for certain Strife enemies.";
+	//strifeally = "Ally";
+	translucent = "If set, allows you to somewhat see through the sprite.";
+	invisible = "If set, the sprite of this monster is not drawn.";
+}
+
 
 // Default flags for first new thing
 defaultthingflags
@@ -47,6 +66,19 @@ linedefflags
 	blocksound = "Block sound";
 	dontdraw = "Hidden";
 	mapped = "Shown";
+}
+
+linedefflagtooltips
+{
+	blocking = "If set on a 2-sided linedef, the linedef blocks players and monsters from being able to move through it. \nThis is typically used for mid-textured cage bars.\nBy convention, most doom-related software sets it for 1-sided lines by default because the\nid Software maps did, but it doesn't actually do anything.";
+	blockmonsters = "If set, blocks only monster movement.\n(in addition to whatever existing blocking properties it would have).";
+	twosided = "If set, then it has 2 sidedefs and acts as a connection between two sectors.";
+	dontpegtop = "If set:\nIf the linedef is 2-sided, the upper texture starts at the height of the higher ceiling.\nIf not set: and the linedef is 2-sided, the upper texture starts at the lower ceiling instead.\nIf the linedef is 1-sided, this does nothing.";
+	dontpegbottom = "If set: If the linedef is 2-sided, the lower texture starts at the height of the higher ceiling.\nIf not set: and the linedef is 2-sided, the upper texture starts at the higher floor instead.\nIf the linedef is 1-sided, this makes the mid texture start at floor instead of the ceiling.\nYou probably want to use this for door tracks if you don't want them to move with the door.";
+	secret = "If set, this flag prevents it from being marked as a switch or a door on the automap.";
+	blocksound = "If set, this linedef will partially block monster-waking sound from passing into the sector on the other side of it.\nNote that a sound must try to pass through two of these lines before being blocked.\nThis does not block the actual audio that the player hears at all, it is only for the monster AI.\nThis does nothing for 1-sided linedefs.";
+	dontdraw = "If set, this line is not shown on the automap even if you are looking directly at it";
+	mapped = "If set, this line is always revealed on the automap even if you haven't actually visited the area.";
 }
 
 
