@@ -40,6 +40,22 @@ linedefflags_udmf
 	blockuse = "Block use actions";
 }
 
+linedefflagtooltips_udmf
+{
+	monsteractivate = "If set, monsters can activate this line's special.";
+	blockeverything = "If set, blocks all actors from moving through it,\nincluding players, monsters, keys, projectiles, hitscan gunshots.\nIt also blocks monster sight.\nNote: Does not block monster hearing.\nDoes not affect 1-sided lines.";
+	blockplayers = "If set, block only players from moving through it.\n(in addition to whatever existing blocking properties it would have)\nDoes not affect 1-sided lines.";
+	blockfloaters = "If set, block flying monsters like cacodemons.\n(in addition to whatever existing blocking properties it would have)\nDoes not affect 1-sided lines.";
+	translucent = "Allows you to somewhat see through the middle texture\non a 2-sided line, without being completely transparent.\nDoes not affect 1-sided lines.";
+	jumpover = "Means it's a railing that you have to jump over.";
+	zoneboundary = "If set, this line acts as a boundary for reverb sound environments.\nThis has no effect on 1-sided lines, as they always act as boundaries for that.";
+	clipmidtex = "Clips middle textures vertically to floor and ceiling.";
+	wrapmidtex = "If set on a 2-sided linedef, wrap middle texture vertically, to reach to the floor or ceiling.\nDoes not affect 1-sided linedefs.";
+	midtex3d = "If set on a 2-sided linedef, the middle texture on this line becomes solid walkable geometry.\nDoes not affect 1-sided linedefs.";
+	blockprojectiles = "If set, block projectiles.\n(in addition to whatever existing blocking properties it would have)\nDoes not affect 1-sided lines.";
+	blockuse = "If set, then players or monsters cannot pull switches or open doors on the other side of this line.";
+}
+
 
 linedefactivations_udmf
 {
@@ -72,6 +88,22 @@ thingflags_udmf
 	class7 = "Class 7";
 	class8 = "Class 8";
 }
+
+thingflagtooltips_udmf
+{
+	skill6 = "If set, this actor appears on any custom 6th difficulty.";
+	skill7 = "If set, this actor appears on any custom 7th difficulty.";
+	skill8 = "If set, this actor appears on any custom 8th difficulty.";
+	class1 = "If set, this actor appears when a player is class #1.\nFor Hexen, this a fighter.";
+	class2 = "If set, this actor appears when a player is class #2.\nFor Hexen, this a cleric.";
+	class3 = "If set, this actor appears when a player is class #3.\nFor Hexen, this a mage.";
+	class4 = "If set, this actor appears when a player is class #4.";
+	class5 = "If set, this actor appears when a player is class #5.";
+	class6 = "If set, this actor appears when a player is class #6.";
+	class7 = "If set, this actor appears when a player is class #7.";
+	class8 = "If set, this actor appears when a player is class #8.";
+}
+
 
 
 // Thing flags UDMF translation table
