@@ -11,6 +11,7 @@ version 2.1.3.12
 - if you hold alt when you start to drag things, it duplicates them instead.
 - bmsq added long texture name support. thanks bmsq!
 - drag/dropping a wad file on main window when nothing is open, now opens that wad
+- added tooltips for thing/linedef flags in the edit windows
 - moved "Grid Increase" / "Grid Decrease" to be beside each other in the hotkey setup
 - fixed a minor bug with displaying texture counts in the browser
 - merged texture and flat browser source code to reduce code duplication (this shouldn't have any effects that are noticeable to you, but please, keep an eye for new bugs with the texture browser)
